# PixelFlow-RPC

./: CMakeLists.txt  Dockerfile  README.md  rpc-deploy.yaml
CXX-engine/include/: processor.h
CXX-engine/src/: main.cpp
doc/: K3S_DeploymentDiagram.mdj
include/: protocol.h
java-client/: README.md
java-client/backend/src/main/java/cn/edu/xmu/rpc/client/: NettyClient.java  NettyClientHandler.java
java-client/backend/src/main/java/cn/edu/xmu/rpc/config/: RpcConfig.java
java-client/backend/src/main/proto/: ImageRequest.proto
java-client/backend/src/main/resources/: application.properties
java-client/frontend/: app.js  config.js  index.html  styles.css
java-client/src/main/java/cn/edu/xmu/rpc/: RpcApplication.java
java-client/src/main/java/cn/edu/xmu/rpc/client/: RpcConnectionPool.java  RpcProxyFactory.java
java-client/src/main/java/cn/edu/xmu/rpc/config/: CorsConfig.java
java-client/src/main/java/cn/edu/xmu/rpc/controller/: DemoController.java
java-client/src/main/java/cn/edu/xmu/rpc/protocol/: MyRpcDecoder.java  MyRpcEncoder.java  RpcRequestPacket.java  ServiceType.java
java-client/src/main/java/cn/edu/xmu/rpc/service/: RemoteImageService.java
java-client/test/: direct_pressure_test.py
k8s-deploy/: rpc-deploy.yaml
k8s-deploy/core/: rpc-deploy.yaml
src/: main.cpp  processor.cpp
